# game

./: .gitignore  CMakeLists.txt  main.cpp
src/: AssetManager.cpp  AssetManager.h  Drawable.h  EventHandler.cpp  EventHandler.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  State.h  StateMachine.cpp  StateMachine.h  definitions.h  main.cpp
src/GameObjects/: Ball.cpp  Ball.h  Block.cpp  Block.h  Board.cpp  Board.h  GameObject.h  GameText.cpp  GameText.h  Paddle.cpp  Paddle.h
src/Helpers/: FpsMeterHelper.cpp  FpsMeterHelper.h  PointCounterHelper.cpp  PointCounterHelper.h
src/Math/: ImageAdjuster.cpp  ImageAdjuster.h  SpriteCollision.cpp  SpriteCollision.h
src/States/: GameOver.cpp  GameOver.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  SplashState.cpp  SplashState.h
test/src/: mainTests.cpp
tests/: CMakeLists.txt
tests/src/GameObjects/: GameTextTest.cpp
tests/src/Math/: ImageAdjusterTest.cpp  SpriteCollisionTest.cpp
